[package]
name = "approx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-rand = "0.14.0"
num = "0.4.0"
rand = "0.8.5"
serde = {version = "1.0.163", features = ["derive"]}

[dev-dependencies]
serde_json = "1.0.96"
